<?xml version="1.0"?>
<package format="2">
  <name>equirec2perspec</name>
  <version>0.1.0</version>
  <description>
    A ROS package for equirectangular to perspective image conversion
  </description>
  <maintainer email="xmj@sjtu.edu.cn">Minjie Xu</maintainer>
  <author email="xmj@sjtu.edu.cn">Minjie Xu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>

  <exec_depend>libopencv-dev</exec_depend>

  <build_export_depend>libopencv-dev</build_export_depend>
</package>
