<?xml version="1.0"?>
<package format="2">
  <name>ricoh_theta_ros</name>
  <version>0.0.1</version>
  <description>
      ROS driver for RICOH THETA V/Z1 camera
  </description>
  <maintainer email="xmj@sjtu.edu.cn">Minjie Xu</maintainer>
  <author email="xmj@sjtu.edu.cn">Minjie Xu</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_camera</exec_depend>
</package>
